--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -241,6 +241,7 @@
 \input{struct_task}
 \chapter{File Documentation}
 \input{todo_8cpp}
+\input{todo_8cpp_source}
 %--- End generated contents ---
 % Index
   \backmatter
