--- a/docs/latex/struct_task.tex
+++ b/docs/latex/struct_task.tex
@@ -24,6 +24,10 @@ Represents a task in the To\+Do list.
 
 Each task has a description and a completion status. 
 
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00031}{31}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
+
+
 \doxysubsection{Constructor \& Destructor Documentation}
 \Hypertarget{struct_task_aa4ae8149d63038b8f352f5ecba9d885d}\index{Task@{Task}!Task@{Task}}
 \index{Task@{Task}!Task@{Task}}
@@ -44,6 +48,10 @@ Constructs a \doxylink{struct_task}{Task}.
 \end{DoxyParams}
 
 
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00040}{40}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
+
+
 \doxysubsection{Member Data Documentation}
 \Hypertarget{struct_task_aea776103cd8853951c39512560d3d230}\index{Task@{Task}!completed@{completed}}
 \index{completed@{completed}!Task@{Task}}
@@ -51,7 +59,11 @@ Constructs a \doxylink{struct_task}{Task}.
 {\footnotesize\ttfamily \label{struct_task_aea776103cd8853951c39512560d3d230} 
 bool Task\+::completed}
 
-The completion status of the task. \Hypertarget{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}\index{Task@{Task}!description@{description}}
+The completion status of the task. 
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00033}{33}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
+\Hypertarget{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}\index{Task@{Task}!description@{description}}
 \index{description@{description}!Task@{Task}}
 \doxysubsubsection{\texorpdfstring{description}{description}}
 {\footnotesize\ttfamily \label{struct_task_a7a3c12f42d34fb8439ebee5b5877f886} 
@@ -59,6 +71,10 @@ string Task\+::description}
 
 The description of the task. 
 
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00032}{32}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
+
+
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/arama/\+CLion\+Projects/\+To\+Do/\mbox{\hyperlink{todo_8cpp}{todo.\+cpp}}\end{DoxyCompactItemize}
+\mbox{\hyperlink{todo_8cpp}{todo.\+cpp}}\end{DoxyCompactItemize}
