--- a/docs/latex/todo_8cpp.tex
+++ b/docs/latex/todo_8cpp.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/arama/\+CLion\+Projects/\+To\+Do/todo.cpp File Reference}
-\hypertarget{todo_8cpp}{}\label{todo_8cpp}\index{C:/Users/arama/CLionProjects/ToDo/todo.cpp@{C:/Users/arama/CLionProjects/ToDo/todo.cpp}}
+\doxysection{todo.\+cpp File Reference}
+\hypertarget{todo_8cpp}{}\label{todo_8cpp}\index{todo.cpp@{todo.cpp}}
 
 
 A simple To\+Do command-\/line program to manage tasks.  
@@ -58,6 +58,10 @@ todo class
 \end{DoxySeeAlso}
 
 
+Definition in file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
+
+
 \doxysubsection{Function Documentation}
 \Hypertarget{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}\index{todo.cpp@{todo.cpp}!addTask@{addTask}}
 \index{addTask@{addTask}!todo.cpp@{todo.cpp}}
@@ -76,6 +80,10 @@ Creates a new task with the given description and adds it to the tasks list.
 {\em task} & The description of the task to be added. \\
 \hline
 \end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00068}{68}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_a600478327502239195208d1fdca0f7c0}\index{todo.cpp@{todo.cpp}!listTasks@{listTasks}}
 \index{listTasks@{listTasks}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{listTasks()}{listTasks()}}
@@ -91,6 +99,10 @@ Iterates through the tasks vector and displays each task\textquotesingle{}s desc
 {\em tasks} & The vector of tasks to be listed. \\
 \hline
 \end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00050}{50}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}\index{todo.cpp@{todo.cpp}!loadTasksFromFile@{loadTasksFromFile}}
 \index{loadTasksFromFile@{loadTasksFromFile}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{loadTasksFromFile()}{loadTasksFromFile()}}
@@ -106,6 +118,10 @@ Reads tasks from the "{}todo.\+txt"{} file and populates the tasks list.
 {\em tasks} & The vector of tasks to be populated. \\
 \hline
 \end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00118}{118}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}\index{todo.cpp@{todo.cpp}!main@{main}}
 \index{main@{main}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
@@ -126,6 +142,10 @@ Handles command-\/line arguments to execute the appropriate task-\/related funct
 \begin{DoxyReturn}{Returns}
 An integer status code (1 for invalid input, 0 for success). 
 \end{DoxyReturn}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00161}{161}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}\index{todo.cpp@{todo.cpp}!markDone@{markDone}}
 \index{markDone@{markDone}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{markDone()}{markDone()}}
@@ -143,6 +163,10 @@ Sets the completion status of the task at the specified index to true.
 {\em index} & The index of the task to be marked as done. \\
 \hline
 \end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00094}{94}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}\index{todo.cpp@{todo.cpp}!removeTask@{removeTask}}
 \index{removeTask@{removeTask}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{removeTask()}{removeTask()}}
@@ -160,6 +184,10 @@ Removes the task at the specified index in the tasks list.
 {\em index} & The index of the task to be removed. \\
 \hline
 \end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00079}{79}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}\index{todo.cpp@{todo.cpp}!resetTasks@{resetTasks}}
 \index{resetTasks@{resetTasks}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{resetTasks()}{resetTasks()}}
@@ -175,6 +203,10 @@ Removes all tasks from the tasks list.
 {\em tasks} & The vector of tasks. \\
 \hline
 \end{DoxyParams}
+
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00108}{108}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
 \Hypertarget{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}\index{todo.cpp@{todo.cpp}!saveTasks@{saveTasks}}
 \index{saveTasks@{saveTasks}!todo.cpp@{todo.cpp}}
 \doxysubsubsection{\texorpdfstring{saveTasks()}{saveTasks()}}
@@ -192,6 +224,10 @@ Writes the current tasks to the "{}todo.\+txt"{} file, saving the description an
 \end{DoxyParams}
 
 
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00143}{143}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
+
+
 \doxysubsection{Variable Documentation}
 \Hypertarget{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}\index{todo.cpp@{todo.cpp}!FILENAME@{FILENAME}}
 \index{FILENAME@{FILENAME}!todo.cpp@{todo.cpp}}
@@ -200,3 +236,6 @@ Writes the current tasks to the "{}todo.\+txt"{} file, saving the description an
 const string FILENAME = "{}todo.\+txt"{}}
 
 The filename where tasks are stored. 
+
+Definition at line \mbox{\hyperlink{todo_8cpp_source_l00023}{23}} of file \mbox{\hyperlink{todo_8cpp_source}{todo.\+cpp}}.
+
