--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,4 +1,4 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{C\+:/\+Users/arama/\+CLion\+Projects/\+To\+Do/\mbox{\hyperlink{todo_8cpp}{todo.\+cpp}} \\*A simple To\+Do command-\/line program to manage tasks }{\pageref{todo_8cpp}}{}
+\item\contentsline{section}{\mbox{\hyperlink{todo_8cpp}{todo.\+cpp}} \\*A simple To\+Do command-\/line program to manage tasks }{\pageref{todo_8cpp}}{}
 \end{DoxyCompactList}
