--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,7 +1,7 @@
 \chapter{To\+Do}
 \hypertarget{index}{}\label{index}\index{ToDo@{ToDo}}
-\label{index_md__c_1_2_users_2arama_2_c_lion_projects_2_to_do_2_r_e_a_d_m_e}%
-\Hypertarget{index_md__c_1_2_users_2arama_2_c_lion_projects_2_to_do_2_r_e_a_d_m_e}%
+\label{index_md__r_e_a_d_m_e}%
+\Hypertarget{index_md__r_e_a_d_m_e}%
  ﻿---\hypertarget{index_autotoc_md0}{}\doxysection{\texorpdfstring{To\+Do Command Line Program}{To\+Do Command Line Program}}\label{index_autotoc_md0}
 A simple command-\/line To\+Do application that allows you to manage your tasks. Tasks are stored in a file ({\ttfamily todo.\+txt}), and the program provides commands for adding, removing, marking tasks as done, listing tasks, resetting tasks, and saving them to a file.
 
