--- a/docs/latex/todo_8cpp_source.tex
+++ b/docs/latex/todo_8cpp_source.tex
@@ -52,70 +52,80 @@
 \DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00109}00109\ \ \ \ \ tasks.clear();}
 \DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00110}00110\ \}}
 \DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00111}00111\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00118}\mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{00118}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(vector<Task>\&\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00119}00119\ \ \ \ \ ifstream\ file(\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}});}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00120}00120\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00121}00121\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ line;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00122}00122\ \ \ \ \ \ \ \ \ tasks.clear();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00123}00123\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (getline(file,\ line))\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00124}00124\ \ \ \ \ \ \ \ \ \ \ \ \ stringstream\ ss(line);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00125}00125\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ desc;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00126}00126\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ completed;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00127}00127\ \ \ \ \ \ \ \ \ \ \ \ \ ss\ >>\ completed;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00128}00128\ \ \ \ \ \ \ \ \ \ \ \ \ getline(ss,\ desc);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00129}00129\ \ \ \ \ \ \ \ \ \ \ \ \ tasks.push\_back(\mbox{\hyperlink{struct_task}{Task}}(desc,\ completed));}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00130}00130\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00131}00131\ \ \ \ \ \ \ \ \ file.close();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00132}00132\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00133}00133\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}No\ saved\ tasks\ found."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00134}00134\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00135}00135\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00136}00136\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00143}\mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{00143}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(\textcolor{keyword}{const}\ vector<Task>\&\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00144}00144\ \ \ \ \ ofstream\ file(\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}});}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00145}00145\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00146}00146\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keyword}{const}\ \textcolor{keyword}{auto}\&\ task\ :\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00147}00147\ \ \ \ \ \ \ \ \ \ \ \ \ file\ <<\ task.completed\ <<\ \textcolor{stringliteral}{"{}\ "{}}\ <<\ task.description\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00148}00148\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00149}00149\ \ \ \ \ \ \ \ \ file.close();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00150}00150\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00151}00151\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00152}00152\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00161}\mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{00161}}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{main}}(\textcolor{keywordtype}{int}\ argc,\ \textcolor{keywordtype}{char}*\ argv[])\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00162}00162\ \ \ \ \ vector<Task>\ tasks;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00163}00163\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00164}00164\ \ \ \ \ \textcolor{comment}{//\ Load\ tasks\ from\ the\ file\ at\ the\ beginning}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00165}00165\ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00166}00166\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00167}00167\ \ \ \ \ \textcolor{keywordflow}{if}\ (argc\ <\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00168}00168\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Usage:\ todo\ [COMMAND]\ [ARGUMENTS]"{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00169}00169\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ 1;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00170}00170\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00171}00171\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00172}00172\ \ \ \ \ \textcolor{keywordtype}{string}\ command\ =\ argv[1];}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00173}00173\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00174}00174\ \ \ \ \ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}list"{}})\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00175}00175\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00176}00176\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}add"{}}\ \&\&\ argc\ >\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00177}00177\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ task(argv[2]);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00178}00178\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{addTask}}(tasks,\ task);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00179}00179\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00180}00180\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}remove"{}}\ \&\&\ argc\ >\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00181}00181\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(argv[2]);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00182}00182\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{removeTask}}(tasks,\ index);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00183}00183\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00184}00184\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}done"{}}\ \&\&\ argc\ >\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00185}00185\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(argv[2]);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00186}00186\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{markDone}}(tasks,\ index);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00187}00187\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00188}00188\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}reset"{}})\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00189}00189\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{resetTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00190}00190\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00191}00191\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00192}00192\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ command."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00193}00193\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00122}\mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{00122}}\ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{trim}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ str)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00123}00123\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ first\ =\ str.find\_first\_not\_of(\textcolor{stringliteral}{"{}\ \(\backslash\)t\(\backslash\)n\(\backslash\)r"{}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00124}00124\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ last\ =\ str.find\_last\_not\_of(\textcolor{stringliteral}{"{}\ \(\backslash\)t\(\backslash\)n\(\backslash\)r"{}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00125}00125\ \ \ \ \ \textcolor{keywordflow}{if}\ (first\ ==\ string::npos\ ||\ last\ ==\ string::npos)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00126}00126\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ \textcolor{stringliteral}{"{}"{}};}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00127}00127\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00128}00128\ \ \ \ \ \textcolor{keywordflow}{return}\ str.substr(first,\ (last\ -\/\ first\ +\ 1));}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00129}00129\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00130}00130\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00148}\mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{00148}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(vector<Task>\&\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00149}00149\ \ \ \ \ ifstream\ file(\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00150}00150\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00151}00151\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ line;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00152}00152\ \ \ \ \ \ \ \ \ tasks.clear();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00153}00153\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (getline(file,\ line))\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00154}00154\ \ \ \ \ \ \ \ \ \ \ \ \ stringstream\ ss(line);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00155}00155\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ completed;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00156}00156\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ desc;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00157}00157\ \ \ \ \ \ \ \ \ \ \ \ \ ss\ >>\ completed;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00158}00158\ \ \ \ \ \ \ \ \ \ \ \ \ getline(ss,\ desc);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00159}00159\ \ \ \ \ \ \ \ \ \ \ \ \ desc\ =\ \mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{trim}}(desc);\ \ \textcolor{comment}{//\ Trim\ leading/trailing\ spaces\ from\ description}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00160}00160\ \ \ \ \ \ \ \ \ \ \ \ \ tasks.push\_back(\mbox{\hyperlink{struct_task}{Task}}(desc,\ completed));}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00161}00161\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00162}00162\ \ \ \ \ \ \ \ \ file.close();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00163}00163\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00164}00164\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}No\ saved\ tasks\ found."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00165}00165\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00166}00166\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00167}00167\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00174}\mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{00174}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(\textcolor{keyword}{const}\ vector<Task>\&\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00175}00175\ \ \ \ \ ofstream\ file(\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00176}00176\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00177}00177\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keyword}{const}\ \textcolor{keyword}{auto}\&\ task\ :\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00178}00178\ \ \ \ \ \ \ \ \ \ \ \ \ file\ <<\ task.completed\ <<\ \textcolor{stringliteral}{"{}\ "{}}\ <<\ task.description\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00179}00179\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00180}00180\ \ \ \ \ \ \ \ \ file.close();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00181}00181\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00182}00182\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00183}00183\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00192}\mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{00192}}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{main}}(\textcolor{keywordtype}{int}\ argc,\ \textcolor{keywordtype}{char}*\ argv[])\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00193}00193\ \ \ \ \ vector<Task>\ tasks;}
 \DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00194}00194\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00195}00195\ \ \ \ \ \textcolor{keywordflow}{return}\ 0;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00196}00196\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00195}00195\ \ \ \ \ \textcolor{comment}{//\ Load\ tasks\ from\ the\ file\ at\ the\ beginning}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00196}00196\ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00197}00197\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00198}00198\ \ \ \ \ \textcolor{keywordflow}{if}\ (argc\ <\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00199}00199\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Usage:\ todo\ [COMMAND]\ [ARGUMENTS]"{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00200}00200\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ 1;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00201}00201\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00202}00202\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00203}00203\ \ \ \ \ \textcolor{keywordtype}{string}\ command\ =\ argv[1];}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00204}00204\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00205}00205\ \ \ \ \ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}list"{}})\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00206}00206\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00207}00207\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}add"{}}\ \&\&\ argc\ >\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00208}00208\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ task(argv[2]);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00209}00209\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{addTask}}(tasks,\ task);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00210}00210\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00211}00211\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}remove"{}}\ \&\&\ argc\ >\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00212}00212\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(argv[2]);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00213}00213\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{removeTask}}(tasks,\ index);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00214}00214\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00215}00215\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}done"{}}\ \&\&\ argc\ >\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00216}00216\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(argv[2]);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00217}00217\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{markDone}}(tasks,\ index);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00218}00218\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00219}00219\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}reset"{}})\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00220}00220\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{resetTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00221}00221\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00222}00222\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00223}00223\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ command."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00224}00224\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00225}00225\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00226}00226\ \ \ \ \ \textcolor{keywordflow}{return}\ 0;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00227}00227\ \}}
 
 \end{DoxyCode}
