Minor changes & space fix & didn't access same .txt in every directory fixed

--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -3,7 +3,7 @@
 \label{index_md__r_e_a_d_m_e}%
 \Hypertarget{index_md__r_e_a_d_m_e}%
  ﻿---\hypertarget{index_autotoc_md0}{}\doxysection{\texorpdfstring{To\+Do Command Line Program}{To\+Do Command Line Program}}\label{index_autotoc_md0}
-A simple command-\/line To\+Do application that allows you to manage your tasks. Tasks are stored in a file ({\ttfamily todo.\+txt}), and the program provides commands for adding, removing, marking tasks as done, listing tasks, resetting tasks, and saving them to a file.
+A simple command-\/line To\+Do application that allows you to manage your tasks. Tasks are stored in a file ({\ttfamily todo.\+txt}), and the program provides commands for adding, removing, marking tasks as done, listing tasks, resetting tasks, and saving them to a file on Windows.
 
 \DoxyHorRuler{0}
 \hypertarget{index_autotoc_md2}{}\doxysubsection{\texorpdfstring{Table of Contents}{Table of Contents}}\label{index_autotoc_md2}
@@ -38,7 +38,7 @@ A simple command-\/line To\+Do application that allows you to manage your tasks.
 
 \begin{DoxyItemize}
 \item A C++ compiler (e.\+g., {\ttfamily g++}, {\ttfamily clang++}) to compile the program.
-\item An operating system with terminal/command prompt support (Linux, mac\+OS, or Windows with an appropriate terminal setup).
+\item A terminal/command prompt.
 \end{DoxyItemize}\hypertarget{index_autotoc_md8}{}\doxysubsubsection{\texorpdfstring{Steps to Install\+:}{Steps to Install\+:}}\label{index_autotoc_md8}
 
 \begin{DoxyEnumerate}
