--- a/docs/latex/todo_8cpp_source.tex
+++ b/docs/latex/todo_8cpp_source.tex
@@ -2,131 +2,148 @@
 \hypertarget{todo_8cpp_source}{}\label{todo_8cpp_source}\mbox{\hyperlink{todo_8cpp}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00001}00001\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00015}00015\ \textcolor{preprocessor}{\#include\ <iostream>}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00016}00016\ \textcolor{preprocessor}{\#include\ <fstream>}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00017}00017\ \textcolor{preprocessor}{\#include\ <vector>}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00018}00018\ \textcolor{preprocessor}{\#include\ <string>}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00019}00019\ \textcolor{preprocessor}{\#include\ <sstream>}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00020}00020\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00021}00021\ \textcolor{keyword}{using\ namespace\ }std;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00022}00022\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00023}\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{00023}}\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}}\ =\ \textcolor{stringliteral}{"{}todo.txt"{}};\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00031}\mbox{\hyperlink{struct_task}{00031}}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_task}{Task}}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00032}\mbox{\hyperlink{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}{00032}}\ \ \ \ \ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}{description}};\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00033}\mbox{\hyperlink{struct_task_aea776103cd8853951c39512560d3d230}{00033}}\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{struct_task_aea776103cd8853951c39512560d3d230}{completed}};\ \ \ \ \ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00040}\mbox{\hyperlink{struct_task_aa4ae8149d63038b8f352f5ecba9d885d}{00040}}\ \ \ \ \ \mbox{\hyperlink{struct_task_aa4ae8149d63038b8f352f5ecba9d885d}{Task}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ desc,\ \textcolor{keywordtype}{bool}\ comp\ =\ \textcolor{keyword}{false})\ :\ \mbox{\hyperlink{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}{description}}(desc),\ \mbox{\hyperlink{struct_task_aea776103cd8853951c39512560d3d230}{completed}}(comp)\ \{\}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00041}00041\ \};}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00042}00042\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00050}\mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{00050}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(vector<Task>\&\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00051}00051\ \ \ \ \ \textcolor{keywordflow}{if}\ (tasks.empty())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00052}00052\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}No\ tasks\ available."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00053}00053\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return};}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00054}00054\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00055}00055\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00056}00056\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{size\_t}\ i\ =\ 0;\ i\ <\ tasks.size();\ ++i)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00057}00057\ \ \ \ \ \ \ \ \ cout\ <<\ i\ +\ 1\ <<\ \textcolor{stringliteral}{"{}.\ ["{}}\ <<\ (tasks[i].completed\ ?\ \textcolor{stringliteral}{"{}X"{}}\ :\ \textcolor{stringliteral}{"{}\ "{}})\ <<\ \textcolor{stringliteral}{"{}]\ "{}}\ <<\ tasks[i].description\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00058}00058\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00059}00059\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00060}00060\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00068}\mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{00068}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{addTask}}(vector<Task>\&\ tasks,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ task)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00069}00069\ \ \ \ \ tasks.push\_back(\mbox{\hyperlink{struct_task}{Task}}(task));}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00070}00070\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00071}00071\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00079}\mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{00079}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{removeTask}}(vector<Task>\&\ tasks,\ \textcolor{keywordtype}{int}\ index)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00080}00080\ \ \ \ \ \textcolor{keywordflow}{if}\ (index\ >=\ 1\ \&\&\ index\ <=\ tasks.size())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00081}00081\ \ \ \ \ \ \ \ \ tasks.erase(tasks.begin()\ +\ index\ -\/\ 1);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00082}00082\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00083}00083\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ task\ index."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00084}00084\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00085}00085\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00086}00086\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00094}\mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{00094}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{markDone}}(vector<Task>\&\ tasks,\ \textcolor{keywordtype}{int}\ index)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00095}00095\ \ \ \ \ \textcolor{keywordflow}{if}\ (index\ >=\ 1\ \&\&\ index\ <=\ tasks.size())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00096}00096\ \ \ \ \ \ \ \ \ tasks[index\ -\/\ 1].completed\ =\ \textcolor{keyword}{true};}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00097}00097\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00098}00098\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ task\ index."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00099}00099\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00100}00100\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00101}00101\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00108}\mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{00108}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{resetTasks}}(vector<Task>\&\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00109}00109\ \ \ \ \ tasks.clear();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00110}00110\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00111}00111\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00122}\mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{00122}}\ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{trim}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ str)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00123}00123\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ first\ =\ str.find\_first\_not\_of(\textcolor{stringliteral}{"{}\ \(\backslash\)t\(\backslash\)n\(\backslash\)r"{}});}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00124}00124\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ last\ =\ str.find\_last\_not\_of(\textcolor{stringliteral}{"{}\ \(\backslash\)t\(\backslash\)n\(\backslash\)r"{}});}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00125}00125\ \ \ \ \ \textcolor{keywordflow}{if}\ (first\ ==\ string::npos\ ||\ last\ ==\ string::npos)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00126}00126\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ \textcolor{stringliteral}{"{}"{}};}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00127}00127\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00128}00128\ \ \ \ \ \textcolor{keywordflow}{return}\ str.substr(first,\ (last\ -\/\ first\ +\ 1));}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00129}00129\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00130}00130\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00148}\mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{00148}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(vector<Task>\&\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00149}00149\ \ \ \ \ ifstream\ file(\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}});}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00150}00150\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00151}00151\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ line;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00152}00152\ \ \ \ \ \ \ \ \ tasks.clear();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00153}00153\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (getline(file,\ line))\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00154}00154\ \ \ \ \ \ \ \ \ \ \ \ \ stringstream\ ss(line);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00155}00155\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ completed;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00156}00156\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ desc;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00157}00157\ \ \ \ \ \ \ \ \ \ \ \ \ ss\ >>\ completed;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00158}00158\ \ \ \ \ \ \ \ \ \ \ \ \ getline(ss,\ desc);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00159}00159\ \ \ \ \ \ \ \ \ \ \ \ \ desc\ =\ \mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{trim}}(desc);\ \ \textcolor{comment}{//\ Trim\ leading/trailing\ spaces\ from\ description}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00160}00160\ \ \ \ \ \ \ \ \ \ \ \ \ tasks.push\_back(\mbox{\hyperlink{struct_task}{Task}}(desc,\ completed));}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00161}00161\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00162}00162\ \ \ \ \ \ \ \ \ file.close();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00163}00163\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00164}00164\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}No\ saved\ tasks\ found."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00165}00165\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00166}00166\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00167}00167\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00174}\mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{00174}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(\textcolor{keyword}{const}\ vector<Task>\&\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00175}00175\ \ \ \ \ ofstream\ file(\mbox{\hyperlink{todo_8cpp_a192ae3fbc914c80cfaa03dd6f27193d1}{FILENAME}});}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00176}00176\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00177}00177\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keyword}{const}\ \textcolor{keyword}{auto}\&\ task\ :\ tasks)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00178}00178\ \ \ \ \ \ \ \ \ \ \ \ \ file\ <<\ task.completed\ <<\ \textcolor{stringliteral}{"{}\ "{}}\ <<\ task.description\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00179}00179\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00180}00180\ \ \ \ \ \ \ \ \ file.close();}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00181}00181\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00182}00182\ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00183}00183\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00192}\mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{00192}}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{main}}(\textcolor{keywordtype}{int}\ argc,\ \textcolor{keywordtype}{char}*\ argv[])\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00193}00193\ \ \ \ \ vector<Task>\ tasks;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00194}00194\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00195}00195\ \ \ \ \ \textcolor{comment}{//\ Load\ tasks\ from\ the\ file\ at\ the\ beginning}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00196}00196\ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00197}00197\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00198}00198\ \ \ \ \ \textcolor{keywordflow}{if}\ (argc\ <\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00199}00199\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Usage:\ todo\ [COMMAND]\ [ARGUMENTS]"{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00200}00200\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ 1;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00201}00201\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00202}00202\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00203}00203\ \ \ \ \ \textcolor{keywordtype}{string}\ command\ =\ argv[1];}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00204}00204\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00205}00205\ \ \ \ \ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}list"{}})\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00206}00206\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00207}00207\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}add"{}}\ \&\&\ argc\ >\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00208}00208\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ task(argv[2]);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00209}00209\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{addTask}}(tasks,\ task);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00210}00210\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00211}00211\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00212}00212\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}remove"{}}\ \&\&\ argc\ >\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00213}00213\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(argv[2]);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00214}00214\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{removeTask}}(tasks,\ index);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00215}00215\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00216}00216\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}done"{}}\ \&\&\ argc\ >\ 2)\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00217}00217\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(argv[2]);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00218}00218\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{markDone}}(tasks,\ index);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00219}00219\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00220}00220\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}reset"{}})\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00221}00221\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{resetTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00222}00222\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00223}00223\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00224}00224\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ command."{}}\ <<\ endl;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00225}00225\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00226}00226\ }
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00227}00227\ \ \ \ \ \textcolor{keywordflow}{return}\ 0;}
-\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00228}00228\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00015}00015\ \textcolor{preprocessor}{\#include\ <windows.h>}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00016}00016\ \textcolor{preprocessor}{\#include\ <iostream>}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00017}00017\ \textcolor{preprocessor}{\#include\ <fstream>}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00018}00018\ \textcolor{preprocessor}{\#include\ <vector>}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00019}00019\ \textcolor{preprocessor}{\#include\ <string>}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00020}00020\ \textcolor{preprocessor}{\#include\ <sstream>}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00021}00021\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00022}00022\ \textcolor{keyword}{using\ namespace\ }std;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00023}00023\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00032}\mbox{\hyperlink{todo_8cpp_a2209e40bf36a4074931060fbd55f7811}{00032}}\ std::string\ \mbox{\hyperlink{todo_8cpp_a2209e40bf36a4074931060fbd55f7811}{getExecutableDirectory}}()\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00033}00033\ \ \ \ \ \textcolor{keywordtype}{char}\ path[MAX\_PATH];}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00034}00034\ \ \ \ \ GetModuleFileName(NULL,\ path,\ MAX\_PATH);\ \textcolor{comment}{//\ Gets\ the\ full\ path\ to\ the\ .exe}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00035}00035\ \ \ \ \ std::string\ fullPath\ =\ path;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00036}00036\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ pos\ =\ fullPath.find\_last\_of(\textcolor{stringliteral}{"{}\(\backslash\)\(\backslash\)/"{}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00037}00037\ \ \ \ \ \textcolor{keywordflow}{return}\ fullPath.substr(0,\ pos);\ \textcolor{comment}{//\ Extracts\ the\ directory\ path}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00038}00038\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00039}00039\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00040}\mbox{\hyperlink{todo_8cpp_a409eec8a04899986e5253eac13b64865}{00040}}\ \textcolor{keyword}{const}\ std::string\ \mbox{\hyperlink{todo_8cpp_a409eec8a04899986e5253eac13b64865}{FILENAME}}\ =\ \mbox{\hyperlink{todo_8cpp_a2209e40bf36a4074931060fbd55f7811}{getExecutableDirectory}}()\ +\ \textcolor{stringliteral}{"{}\(\backslash\)\(\backslash\)todo.txt"{}};\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00048}\mbox{\hyperlink{struct_task}{00048}}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_task}{Task}}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00049}\mbox{\hyperlink{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}{00049}}\ \ \ \ \ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}{description}};\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00050}\mbox{\hyperlink{struct_task_aea776103cd8853951c39512560d3d230}{00050}}\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{struct_task_aea776103cd8853951c39512560d3d230}{completed}};\ \ \ \ \ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00057}\mbox{\hyperlink{struct_task_aa4ae8149d63038b8f352f5ecba9d885d}{00057}}\ \ \ \ \ \mbox{\hyperlink{struct_task_aa4ae8149d63038b8f352f5ecba9d885d}{Task}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ desc,\ \textcolor{keywordtype}{bool}\ comp\ =\ \textcolor{keyword}{false})\ :\ \mbox{\hyperlink{struct_task_a7a3c12f42d34fb8439ebee5b5877f886}{description}}(desc),\ \mbox{\hyperlink{struct_task_aea776103cd8853951c39512560d3d230}{completed}}(comp)\ \{\}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00058}00058\ \};}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00059}00059\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00067}\mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{00067}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(vector<Task>\&\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00068}00068\ \ \ \ \ \textcolor{keywordflow}{if}\ (tasks.empty())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00069}00069\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}No\ tasks\ available."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00070}00070\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return};}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00071}00071\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00072}00072\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00073}00073\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{size\_t}\ i\ =\ 0;\ i\ <\ tasks.size();\ ++i)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00074}00074\ \ \ \ \ \ \ \ \ cout\ <<\ i\ +\ 1\ <<\ \textcolor{stringliteral}{"{}.\ ["{}}\ <<\ (tasks[i].completed\ ?\ \textcolor{stringliteral}{"{}X"{}}\ :\ \textcolor{stringliteral}{"{}\ "{}})\ <<\ \textcolor{stringliteral}{"{}]\ "{}}\ <<\ tasks[i].description\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00075}00075\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00076}00076\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00077}00077\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00085}\mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{00085}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{addTask}}(vector<Task>\&\ tasks,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ task)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00086}00086\ \ \ \ \ tasks.push\_back(\mbox{\hyperlink{struct_task}{Task}}(task));}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00087}00087\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00088}00088\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00096}\mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{00096}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{removeTask}}(vector<Task>\&\ tasks,\ \textcolor{keywordtype}{int}\ index)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00097}00097\ \ \ \ \ \textcolor{keywordflow}{if}\ (index\ >=\ 1\ \&\&\ index\ <=\ tasks.size())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00098}00098\ \ \ \ \ \ \ \ \ tasks.erase(tasks.begin()\ +\ index\ -\/\ 1);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00099}00099\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00100}00100\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ task\ index."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00101}00101\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00102}00102\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00103}00103\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00111}\mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{00111}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{markDone}}(vector<Task>\&\ tasks,\ \textcolor{keywordtype}{int}\ index)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00112}00112\ \ \ \ \ \textcolor{keywordflow}{if}\ (index\ >=\ 1\ \&\&\ index\ <=\ tasks.size())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00113}00113\ \ \ \ \ \ \ \ \ tasks[index\ -\/\ 1].completed\ =\ \textcolor{keyword}{true};}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00114}00114\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00115}00115\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ task\ index."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00116}00116\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00117}00117\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00118}00118\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00125}\mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{00125}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{resetTasks}}(vector<Task>\&\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00126}00126\ \ \ \ \ tasks.clear();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00127}00127\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00128}00128\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00139}\mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{00139}}\ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{trim}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{string}\&\ str)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00140}00140\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ first\ =\ str.find\_first\_not\_of(\textcolor{stringliteral}{"{}\ \(\backslash\)t\(\backslash\)n\(\backslash\)r"{}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00141}00141\ \ \ \ \ \textcolor{keywordtype}{size\_t}\ last\ =\ str.find\_last\_not\_of(\textcolor{stringliteral}{"{}\ \(\backslash\)t\(\backslash\)n\(\backslash\)r"{}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00142}00142\ \ \ \ \ \textcolor{keywordflow}{if}\ (first\ ==\ string::npos\ ||\ last\ ==\ string::npos)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00143}00143\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ \textcolor{stringliteral}{"{}"{}};}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00144}00144\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00145}00145\ \ \ \ \ \textcolor{keywordflow}{return}\ str.substr(first,\ (last\ -\/\ first\ +\ 1));}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00146}00146\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00147}00147\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00165}\mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{00165}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(vector<Task>\&\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00166}00166\ \ \ \ \ ifstream\ file(\mbox{\hyperlink{todo_8cpp_a409eec8a04899986e5253eac13b64865}{FILENAME}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00167}00167\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00168}00168\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ line;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00169}00169\ \ \ \ \ \ \ \ \ tasks.clear();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00170}00170\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (getline(file,\ line))\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00171}00171\ \ \ \ \ \ \ \ \ \ \ \ \ stringstream\ ss(line);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00172}00172\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ completed;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00173}00173\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{string}\ desc;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00174}00174\ \ \ \ \ \ \ \ \ \ \ \ \ ss\ >>\ completed;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00175}00175\ \ \ \ \ \ \ \ \ \ \ \ \ getline(ss,\ desc);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00176}00176\ \ \ \ \ \ \ \ \ \ \ \ \ desc\ =\ \mbox{\hyperlink{todo_8cpp_a3101bc0142a49d9d11ad3f8cac766a2d}{trim}}(desc);\ \ \textcolor{comment}{//\ Trim\ leading/trailing\ spaces\ from\ description}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00177}00177\ \ \ \ \ \ \ \ \ \ \ \ \ tasks.push\_back(\mbox{\hyperlink{struct_task}{Task}}(desc,\ completed));}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00178}00178\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00179}00179\ \ \ \ \ \ \ \ \ file.close();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00180}00180\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00181}00181\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}No\ saved\ tasks\ found."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00182}00182\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00183}00183\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00184}00184\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00191}\mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{00191}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(\textcolor{keyword}{const}\ vector<Task>\&\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00192}00192\ \ \ \ \ ofstream\ file(\mbox{\hyperlink{todo_8cpp_a409eec8a04899986e5253eac13b64865}{FILENAME}});}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00193}00193\ \ \ \ \ \textcolor{keywordflow}{if}\ (file.is\_open())\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00194}00194\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keyword}{const}\ \textcolor{keyword}{auto}\&\ task\ :\ tasks)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00195}00195\ \ \ \ \ \ \ \ \ \ \ \ \ file\ <<\ task.completed\ <<\ \textcolor{stringliteral}{"{}\ "{}}\ <<\ task.description\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00196}00196\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00197}00197\ \ \ \ \ \ \ \ \ file.close();}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00198}00198\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00199}00199\ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00200}00200\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00209}\mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{00209}}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{todo_8cpp_a0ddf1224851353fc92bfbff6f499fa97}{main}}(\textcolor{keywordtype}{int}\ argc,\ \textcolor{keywordtype}{char}*\ argv[])\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00210}00210\ \ \ \ \ vector<Task>\ tasks;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00211}00211\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00212}00212\ \ \ \ \ \textcolor{comment}{//\ Load\ tasks\ from\ the\ file\ at\ the\ beginning}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00213}00213\ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a9e0cd78d6f08e49303a6b710c623347a}{loadTasksFromFile}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00214}00214\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00215}00215\ \ \ \ \ \textcolor{keywordflow}{if}\ (argc\ <\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00216}00216\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Usage:\ todo\ [COMMAND]\ [ARGUMENTS]"{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00217}00217\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ 1;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00218}00218\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00219}00219\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00220}00220\ \ \ \ \ \textcolor{keywordtype}{string}\ command\ =\ argv[1];}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00221}00221\ \ \ \ \ \textcolor{keywordtype}{string}\ task;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00222}00222\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00223}00223\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 2;\ i\ <\ argc;\ ++i)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00224}00224\ \ \ \ \ \ \ \ \ task\ +=\ argv[i];}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00225}00225\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (i\ <\ argc\ -\/\ 1)\ task\ +=\ \textcolor{stringliteral}{"{}\ "{}};\ \textcolor{comment}{//\ Add\ space\ between\ arguments}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00226}00226\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00227}00227\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00228}00228\ \ \ \ \ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}list"{}})\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00229}00229\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00230}00230\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}add"{}}\ \&\&\ argc\ >\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00231}00231\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_ade2993c15d978cb3c63ad7edcc285701}{addTask}}(tasks,\ task);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00232}00232\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00233}00233\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00234}00234\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}remove"{}}\ \&\&\ argc\ >\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00235}00235\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(task);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00236}00236\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_aebdca44d337f2bcd7071bcceb9f56bb8}{removeTask}}(tasks,\ index);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00237}00237\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00238}00238\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00239}00239\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}done"{}}\ \&\&\ argc\ >\ 2)\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00240}00240\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ index\ =\ stoi(task);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00241}00241\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a5938fa77407466486ef9cfe88267bf93}{markDone}}(tasks,\ index);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00242}00242\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00243}00243\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a600478327502239195208d1fdca0f7c0}{listTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00244}00244\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \textcolor{keywordflow}{if}\ (command\ ==\ \textcolor{stringliteral}{"{}reset"{}})\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00245}00245\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_a2367fb45338d4de23175a4fc16afa9c5}{resetTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00246}00246\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{todo_8cpp_abba30971cdda3b8b2eb2746f3ee7259f}{saveTasks}}(tasks);}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00247}00247\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}All\ tasks\ reset."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00248}00248\ \ \ \ \ \}\ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00249}00249\ \ \ \ \ \ \ \ \ cout\ <<\ \textcolor{stringliteral}{"{}Invalid\ command."{}}\ <<\ endl;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00250}00250\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00251}00251\ }
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00252}00252\ \ \ \ \ \textcolor{keywordflow}{return}\ 0;}
+\DoxyCodeLine{\Hypertarget{todo_8cpp_source_l00253}00253\ \}}
 
 \end{DoxyCode}
